@@ -264,6 +264,7 @@ FILES
 	doc/README.macos    - notes on using libpcap on macOS
 	doc/README.septel   - notes on using libpcap to capture on Intel/Septel devices
 	doc/README.sita	    - notes on using libpcap to capture on SITA devices
+	doc/README.solaris.md - notes on using libpcap on Solaris
 	doc/README.tru64    - notes on using libpcap on Digital/Tru64 UNIX
 	doc/README.Win32.md - notes on using libpcap on Win32 systems (with Npcap)
 	VERSION		    - version of this release
